--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,16 +13,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.KhaibaoDangky"></activity>
+        <activity android:name=".Adapter.CustomDialogXemNguoithan"></activity>
+        <activity android:name=".ui.Thongtincanhan_menu" />
+        <activity android:name=".ui.HomeActivity" />
+        <activity android:name=".ui.KhaibaoDangky" />
         <activity android:name=".ui.Dangky" />
         <activity android:name=".ui.Dangnhap" />
-        <activity android:name=".ui.Nhapsodienthoai">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+        <activity android:name=".ui.Nhapsodienthoai" />
         <activity android:name=".Fragment.Frag_Request_khaibaotiepxuc" />
         <activity android:name=".Fragment.Frag_Request_Phananh" />
         <activity android:name=".Fragment.Frag_Healthy_Nguoithan" />
@@ -34,7 +31,17 @@
         <activity android:name=".ui.MenuActivity" />
         <activity android:name=".ui.RequestActivity" />
         <activity android:name=".ui.HealthyActivity" />
-        <activity android:name=".MainActivity" />
+        <activity android:name=".MainActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
     </application>
 
 </manifest>
